logs/dag_id=parsing_recipes/run_id=manual__2024-05-15T15:23:11.327223+00:00/task_id=store_data/attempt=1.log
[2024-05-15T15:23:14.668+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-15T15:23:14.682+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: parsing_recipes.store_data manual__2024-05-15T15:23:11.327223+00:00 [queued]>
[2024-05-15T15:23:14.686+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: parsing_recipes.store_data manual__2024-05-15T15:23:11.327223+00:00 [queued]>
[2024-05-15T15:23:14.687+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-05-15T15:23:14.692+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): store_data> on 2024-05-15 15:23:11.327223+00:00
[2024-05-15T15:23:14.696+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=14018) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-05-15T15:23:14.697+0000] {standard_task_runner.py:63} INFO - Started process 14019 to run task
[2024-05-15T15:23:14.696+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'parsing_recipes', 'store_data', 'manual__2024-05-15T15:23:11.327223+00:00', '--job-id', '6377', '--raw', '--subdir', 'DAGS_FOLDER/recipes.py', '--cfg-path', '/tmp/tmpa4bdep3a']
[2024-05-15T15:23:14.697+0000] {standard_task_runner.py:91} INFO - Job 6377: Subtask store_data
[2024-05-15T15:23:14.718+0000] {task_command.py:426} INFO - Running <TaskInstance: parsing_recipes.store_data manual__2024-05-15T15:23:11.327223+00:00 [running]> on host 53697f0c267a
[2024-05-15T15:23:14.755+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='parsing_recipes' AIRFLOW_CTX_TASK_ID='store_data' AIRFLOW_CTX_EXECUTION_DATE='2024-05-15T15:23:11.327223+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-15T15:23:11.327223+00:00'
[2024-05-15T15:23:14.756+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-15T15:23:14.770+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-05-15T15:23:14.775+0000] {logging_mixin.py:188} INFO - [['Azimio la Umoja Threatens to Call for Demonstrations over Contentious Finance Bi...', 'https://www.tuko.co.ke/politics/548401-azimio-la-umoja-threatens-call-demonstrations-contentious-finance-bill-2024/', '2024-05-15T15:55:54+03:00'], ['US Ambassador Meg Whitman Backs Raila Odinga\'s AUC Bid: "It Will Be Great Deal f...', 'https://www.tuko.co.ke/politics/548407-us-ambassador-meg-whitman-backs-raila-odingas-auc-bid-great-deal-kenya/', '2024-05-15T14:39:04+03:00'], ["Blogger Pauline Njoroge Refutes Claims She's Ditched Azimio for Government", 'https://www.tuko.co.ke/politics/548369-blogger-pauline-njoroge-refutes-claims-s-ditched-azimio-government/', '2024-05-15T12:20:23+03:00'], ['William Ruto Responds to Harvard Student Asking About Taxation: "You\'ve Been Tal...', 'https://www.tuko.co.ke/politics/548339-william-ruto-responds-harvard-student-taxation-ve-talking-opposition/', '2024-05-15T11:50:43+03:00'], ['Danson Mungatana Slams Gachagua\'s Call for One Man, One Shilling: "All of Us Are...', 'https://www.tuko.co.ke/politics/548345-danson-mungatana-slams-gachaguas-call-man-shilling-disappointed/', '2024-05-15T11:35:47+03:00'], ['Silvanus Osoro Wants Governors Salaries Deducted: "All They Do Is Travel with Gi...', 'https://www.tuko.co.ke/politics/548137-silvanus-osoro-governors-salaries-deducted-travel-girlfriends/', '2024-05-14T11:04:55+03:00']]
[2024-05-15T15:23:14.776+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-15T15:23:14.776+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/recipes.py", line 200, in store_data
    cursor.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "la"
LINE 2: ... postgres.public.recipes(url,data) VALUES (Azimio la Umoja T...
                                                             ^

[2024-05-15T15:23:14.782+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=parsing_recipes, task_id=store_data, run_id=manual__2024-05-15T15:23:11.327223+00:00, execution_date=20240515T152311, start_date=20240515T152314, end_date=20240515T152314
[2024-05-15T15:23:14.786+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 6377 for task store_data (syntax error at or near "la"
LINE 2: ... postgres.public.recipes(url,data) VALUES (Azimio la Umoja T...
                                                             ^
; 14019)
[2024-05-15T15:23:14.795+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-15T15:23:14.803+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-15T15:23:14.804+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
